# agentdeal

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py
agentdeal/: __init__.py  agents.py  config.py  engine.py  protocol.py  schemas.py  storage.py
agentdeal/integrations/: __init__.py  fulfillment.py  identity.py  kimi_client.py  market.py  tokenrouter_client.py
agentdeal/integrations/terminal3_node/: auth.mjs  package-lock.json  package.json
examples/: reference_sellers.py  run_demo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentStation.tsx  Controls.tsx  ConvergenceMeter.tsx  FulfillmentPanel.tsx  IdentityBadge.tsx  NegotiationStream.tsx  OfferCard.tsx  SettlementPanel.tsx  StatusBar.tsx
frontend/src/lib/: api.ts  types.ts
saved/: sample.json
tests/: conftest.py  test_engine.py  test_protocol.py
